# AmanitaOcean

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-platforms.yml
Source/: PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: BloomCharacter.cpp  BloomCharacter.h  Drift2Character.cpp  Drift2Character.h  DriftCharacter.cpp  DriftCharacter.h  FDNReverb.cpp  FDNReverb.h  SpatialDucker.cpp  SpatialDucker.h  VeilCharacter.cpp  VeilCharacter.h
Source/ui/: CharacterPalette.h  CharacterSelector.cpp  CharacterSelector.h  DeepCurrentRenderer.cpp  DeepCurrentRenderer.h  OceanLookAndFeel.cpp  OceanLookAndFeel.h  ParameterKnob.cpp  ParameterKnob.h  PluginEditor.cpp  PluginEditor.h
Tests/: DspTests.cpp  StateTests.cpp
